# turing-machine

./: Makefile  README  README.md  Report.tex  Turing.cabal  palindrome.tm  reverse.tm  turing.hs
TMs/: binary_addition.tm  example.tm  palindrome.tm  reverse.tm  substring.tm
docs/: Main.html  TuringMachine.html  TuringMachineParser.html  TuringTape.html  doc-index.html  index-frames.html  index.html  mini_TuringMachine.html  mini_TuringMachineParser.html  mini_TuringTape.html
src/: Main.hs  Parser.hs  Tape.hs  Turing.hs  TuringMachine.hs  TuringMachineParser.hs  TuringTape.hs
