name:                runtm
version:             0.1.0.0
synopsis:            A Turing Machine written in Haskell
-- description:
author:              Sizhe Yuen
maintainer:          sy35@st-andrews.ac.uk
category:            Machine
build-type:          Simple
cabal-version:       >=1.10

executable runtm
  main-is:             Main.hs
  Other-modules:       TuringMachine, TuringMachineParser, TuringTape
  build-depends:       base >=4.6 && <4.8,
                       split,
                       containers

  hs-source-dirs:      src
  default-language:    Haskell2010